Fix spacing on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    min-width: 100vh;
+    min-width: 100vw;
 }
 
 #main {
@@ -45,7 +45,7 @@ body {
 #links a {
     position: relative;
     display: inline-block;
-    margin: 0 1rem;
+    margin: 1rem;
     text-decoration: none;
     opacity: 0;
 }
@@ -67,18 +67,28 @@ body {
     }
 }
 
+@media screen and (max-width: 360px) {
+    #name {
+        white-space: normal;
+    }
+}
+
 @media screen and (max-width: 725px) {
     #name {
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 
-    #links {
-        text-align: center;
+    #links img {
+        width: 1.5rem;
     }
 }
 
 @media screen and (min-width: 726px) and (max-width: 1300px) {
     #name {
         font-size: 3rem;
+    }
+
+    #links img {
+        width: 1.7rem;
     }
 }
